# onec-context-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: 1c-platform-cli.md
examples/: commands.txt  live-codebase-proof.md  proof-surface.md
install/: install_claude.sh  install_codex.sh  install_cursor.sh
scripts/: __init__.py  bootstrap.py  build_code_pack.py  build_config_pack.py  build_local_kb.py  doctor.py  ensure_workspace.py  export_skill_bundle.py  fetch_its_v8std.py  init_workspace.py  install_agent.py  mcp_server.py  onec_context.py  resolve_packs.py  status_workspace.py
skill/: SKILL.md  __init__.py
src/onec_help/: __init__.py  runtime_db.py  workspace_manifest.py  zstd_compat.py
templates/: __init__.py  agent_skill.md.tmpl  bundle_readme.md.tmpl  cursor_dev_standards_rule.mdc.tmpl  cursor_explain_object_rule.mdc.tmpl  cursor_platform_cli_rule.mdc.tmpl  cursor_platform_fact_check_rule.mdc.tmpl  cursor_query_strategy_rule.mdc.tmpl  cursor_rule.mdc.tmpl  dev_standards_reference.md.tmpl  dev_standards_skill.md.tmpl  explain_object_reference.md.tmpl  explain_object_skill.md.tmpl  platform_cli_reference.md.tmpl  platform_cli_skill.md.tmpl  platform_fact_check_reference.md.tmpl  platform_fact_check_skill.md.tmpl  query_strategy_reference.md.tmpl  query_strategy_skill.md.tmpl
tools/: __init__.py  analyze_metadata_xml.py  benchmark_local_kb.py  local_kb_query.py  query_code_pack.py  query_config_pack.py  verify_local_kb.py
tools/1c/: README.md  build_external_data_processor.sh  unpack_external_data_processor.sh
(+22 files in other folders)
